--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-</html>
+<html>
 
 <head>
 <meta charset="UTF-8">
@@ -35,9 +35,9 @@
                     <div class="menu">
 	                    <div class="collapse navbar-collapse" id="navbar-container">
 	                        <ul class="nav navbar-nav">
-								<li role="presentation"><a href="#">HOME</a></li>
-								<li role="presentation"><a href="#">SOUPS</a></li>
-								<li role="presentation"><a href="#">STEWS</a></li>
+								<li role="presentation"><a href="index.html">HOME</a></li>
+								<li role="presentation"><a href="soups.html">SOUPS</a></li>
+								<li role="presentation"><a href="casseroles.html">CASSEROLES</a></li>
 								<li role="presentation"><a href="#">DESSERTS</a></li>
 	                        </ul>
 	                    </div>
@@ -124,6 +124,10 @@
 			</div>
 		</div>
 	</div><!--thumbs-->		
+
+	<div class="panel panel-default">
+  		<div class="panel-footer">&copy; 2012-2015 ZIGMAS COOKING!</div>
+	</div>
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </body>
