--- a/casseroles.html
+++ b/casseroles.html
@@ -25,7 +25,7 @@
 <body id="dish">
 
             <nav class="navbar navbar-default" role="navigation">
-                <div class="container">
+                <div class="container" color="red;">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
@@ -35,12 +35,15 @@
                     </div>
                     <div class="menu">
 	                    <div class="collapse navbar-collapse" id="navbar-container">
-	                        <ul class="nav navbar-nav">
-								<li role="presentation"><a href="index.html">HOME</a></li>
-								<li role="presentation"><a href="soups.html">SOUPS</a></li>
-								<li role="presentation"><a href="casseroles.html">CASSEROLES</a></li>
-								<li role="presentation"><a href="#">DESSERTS</a></li>
-	                        </ul>
+	                    	<a class="brand" href="index.html"><img src="Logo/logo2.png" alt=Logo style="height:80px;"></a>
+	                    	<div class="pull-right">
+		                        <ul class="nav navbar-nav">
+									<li role="presentation"><a href="index.html">HOME</a></li>
+									<li role="presentation"><a href="casseroles.html">CASSEROLES</a></li>
+									<li role="presentation"><a href="soups.html">SOUPS</a></li>
+									<li role="presentation"><a href="desserts.html">DESSERTS</a></li>
+		                        </ul>
+	                    	</div>
 	                    </div>
                 	</div>
                 </div><!--container-->
@@ -89,7 +92,7 @@
 						<img class="img-responsive" src="Casseroles/onion.jpg" alt="Casserole">
 					</div>
 					<div class="col-md-6">
-						<p><strong>Ingredients:</strong><br><br>10 thin spring onions<br>4 large eggs, lightly beaten $<br>1 cup milk $<br>3/4 cup all-purpose flour $<br>1 teaspoon kosher salt<br>1/2 teaspoon baking powder $<br>1/4 teaspoon freshly ground pepper $<br>2 tablespoons butter $<br>5 ounces Gruyere cheese, cubed</p>
+						<p><strong>Ingredients:</strong><br><br>10 thin spring onions<br>4 large eggs, lightly beaten $<br>1 cup milk<br>3/4 cup all-purpose flour<br>1 teaspoon kosher salt<br>1/2 teaspoon baking powder $<br>1/4 teaspoon freshly ground pepper<br>2 tablespoons butter $<br>5 ounces Gruyere cheese, cubed</p>
 						<p><strong>Directions:</strong><br><br>1. Preheat oven to 180°. Heat a cast-iron skillet in oven. Trim roots from onions; discard roots. Chop half of onions.<br>2. Whisk together eggs and milk. Sift together flour and next 3 ingredients. Gradually add flour mixture to egg mixture, whisking rapidly 20 to 30 seconds or just until blended and smooth. (There should be no lumps.) Stir in chopped onions. Let stand 5 minutes.<br>3. Carefully remove hot skillet from oven. Add butter, and let stand until butter is melted. Place skillet over medium-high heat, and pour batter into skillet. Arrange cheese and remaining whole onions over top of batter, and cook 30 seconds to 1 minute or until edges begin to set.<br>4. Transfer skillet to top oven rack, and bake at 180° for 22 to 25 minutes or until golden brown and puffy. (Outside edges should be crispy, and inside texture should resemble a custard popover. Pie will deflate quickly.) Serve immediately.</p>
 					</div>
 				</div>
