--- a/soups.html
+++ b/soups.html
@@ -35,12 +35,15 @@
                     </div>
                     <div class="menu">
 	                    <div class="collapse navbar-collapse" id="navbar-container">
-	                        <ul class="nav navbar-nav">
-								<li role="presentation"><a href="index.html">HOME</a></li>
-								<li role="presentation"><a href="soups.html">SOUPS</a></li>
-								<li role="presentation"><a href="casseroles.html">CASSEROLES</a></li>
-								<li role="presentation"><a href="#">DESSERTS</a></li>
-	                        </ul>
+	                    	<a class="brand" href="index.html"><img src="Logo/logo2.png" alt=Logo style="height:80px;"></a>
+	                    	<div class="pull-right">
+		                        <ul class="nav navbar-nav">
+									<li role="presentation"><a href="index.html">HOME</a></li>
+									<li role="presentation"><a href="casseroles.html">CASSEROLES</a></li>
+									<li role="presentation"><a href="soups.html">SOUPS</a></li>
+									<li role="presentation"><a href="desserts.html">DESSERTS</a></li>
+		                        </ul>
+	                    	</div>
 	                    </div>
                 	</div>
                 </div><!--container-->
@@ -82,11 +85,11 @@
 				</div>
 			</div>
 
-			<h3><img class="icons" src="Soups/zuc.jpg" alt="icon">Zucchini soup</h3>
+			<h3><img class="icons" src="Soups/zuc1.jpg" alt="icon">Zucchini soup</h3>
 			<div>
 				<div class="row">
 					<div class="col-md-6">
-						<img class="img-responsive" src="Soups/zuc.jpg" alt="Zucchini soup">
+						<img class="img-responsive" src="Soups/zuc1.jpg" alt="Zucchini soup">
 					</div>
 					<div class="col-md-6">
 						<p><strong>Ingredients:</strong><br><br>4 tablespoons unsalted butter<br>1 white onion, sliced<br>8 to 9 large cloves garlic, sliced thinly  <br>4 medium zucchini <br>4 cups vegetable broth <br>1/2 teaspoon powdered ginger <br>Salt and pepper</p>
