--- a/test.html
+++ b/test.html
@@ -35,12 +35,15 @@
                     </div>
                     <div class="menu">
 	                    <div class="collapse navbar-collapse" id="navbar-container">
-	                        <ul class="nav navbar-nav">
-								<li role="presentation"><a href="index.html">HOME</a></li>
-								<li role="presentation"><a href="soups.html">SOUPS</a></li>
-								<li role="presentation"><a href="casseroles.html">CASSEROLES</a></li>
-								<li role="presentation"><a href="#">DESSERTS</a></li>
-	                        </ul>
+	                    	<a class="brand" href="index.html"><img src="Logo/logo2.png" alt=Logo style="height:80px;"></a>
+	                    	<div class="pull-right">
+		                        <ul class="nav navbar-nav">
+									<li role="presentation"><a href="index.html">HOME</a></li>
+									<li role="presentation"><a href="casseroles.html">CASSEROLES</a></li>
+									<li role="presentation"><a href="soups.html">SOUPS</a></li>
+									<li role="presentation"><a href="desserts.html">DESSERTS</a></li>
+		                        </ul>
+	                    	</div>
 	                    </div>
                 	</div>
                 </div><!--container-->
