--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+</head>
 <link rel="stylesheet" href="main.css">
 </head>
 
@@ -33,13 +34,17 @@
                         </button>
                     </div>
                     <div class="menu">
+
 	                    <div class="collapse navbar-collapse" id="navbar-container">
+	                    	<a class="brand" href="index.html"><img src="Logo/logo2.png" alt=Logo style="height:80px;"></a>
+	                    	<div class="pull-right">
 	                        <ul class="nav navbar-nav">
 								<li role="presentation"><a href="index.html">HOME</a></li>
-								<li role="presentation"><a href="soups.html">SOUPS</a></li>
 								<li role="presentation"><a href="casseroles.html">CASSEROLES</a></li>
-								<li role="presentation"><a href="#">DESSERTS</a></li>
+								<li role="presentation"><a href="soups.html">SOUPS</a></li>
+								<li role="presentation"><a href="desserts.html">DESSERTS</a></li>
 	                        </ul>
+	                    	</div>
 	                    </div>
                 	</div>
                 </div><!--container-->
@@ -47,29 +52,29 @@
 
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
-		<ol class="carousel-indicators">
-			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-			<li data-target="#myCarousel" data-slide-to="1"></li>
-			<li data-target="#myCarousel" data-slide-to="2"></li>
-		</ol>
+	<ol class="carousel-indicators">
+		<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+		<li data-target="#myCarousel" data-slide-to="1"></li>
+		<li data-target="#myCarousel" data-slide-to="2"></li>
+	</ol>
 
 	 <div class="carousel-inner">
 	 	<div class="item active">
 	 		<img src="Carousel/Crop/vegetarianfood_rs.jpg" alt="Asparagus" class="img-responsive">
 	 		<div class="carousel-caption">
-	 			<h2>[NAME]</h2>
+	 			<h2>GoVeggo!</h2>
 	 		</div>
 	 	</div>
 	 	<div class="item">
 	 		<img src="Carousel/Crop/dessert_rs.jpg" alt="Dessert" class="img-responsive">
 	 		<div class="carousel-caption">
-	 			<h2>[NAME]</h2>
+	 			<h2>GoVeggo!</h2>
 	 		</div>
 	 	</div>
 	 	<div class="item">
 	 		<img src="Carousel/Crop/pizza_rs.jpg" alt="Pizza" class="img-responsive">
 	 		<div class="carousel-caption">
-	 			<h2>[NAME]</h2>
+	 			<h2>GoVeggo!</h2>
 	 		</div>
 	 	</div>
 	 </div>
@@ -93,7 +98,7 @@
 			      <div class="caption" id="christmas">
 			        <h2>Veggie Christmas meals</h2>
 			        <h4>Great vegetarian recipes for the <br>winter holidays</h4>
-			        <p><a href="#" class="btn btn-default" role="button">Find recipes!</a></p>
+			        <p><a href="christmas.html" class="btn btn-default" role="button">Find recipes!</a></p>
 			      </div>
 			    </div>
 			  </div>
@@ -105,7 +110,7 @@
 			      <div class="caption" id="dessert">
 			        <h2>Desserts!</h2>
 			        <h4>Vegan-friendly desserts <br>for a cozy break</h4>
-			        <p><a href="#" class="btn btn-default" role="button">Find recipes!</a></p>
+			        <p><a href="vegan.html" class="btn btn-default" role="button">Find recipes!</a></p>
 			      </div>
 			    </div>
 			  </div>
@@ -117,7 +122,7 @@
 			      <div class="caption" id="sport">
 			        <h2>Smoothies</h2>
 			        <h4>Smoothie recipes to keep you fit!</h4>
-			        <p><a href="#" class="btn btn-default" role="button">Find recipes!</a></p>
+			        <p><a href="smoothies.html" class="btn btn-default" role="button">Find recipes!</a></p>
 			      </div>
 			    </div>
 			  </div>
@@ -125,9 +130,18 @@
 		</div>
 	</div><!--thumbs-->		
 
-	<div class="panel panel-default">
-  		<div class="panel-footer">&copy; 2012-2015 ZIGMAS COOKING!</div>
+	<div id="footer">
+		<div class="row">
+			<div class="col-md-8">
+				<p>&copy; 2012-2015 ZIGMAS COOKING!</p>
+			</div>
+			<div class="col-md-4 pull-right">
+			  	<a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
+			  	<a href="#"><i class="fa fa-twitter fa-2x"></i></a>
+			</div>
+		</div>
 	</div>
+
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </body>
