--- a/desserts.html
+++ b/desserts.html
@@ -3,6 +3,7 @@
 
 <head>
 <meta charset="UTF-8">
+<link rel="shortcut icon" href="Fav/favicon.ico" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Desserts</title>
 <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
@@ -25,8 +26,9 @@
 <body id="dish">
 
             <nav class="navbar navbar-default" role="navigation">
-                <div class="container" color="red;">
+                <div class="container">
                     <div class="navbar-header">
+                    	<a class="brand" href="index.html"><img src="Logo/logo2.png" alt=Logo></a>
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -35,7 +37,6 @@
                     </div>
                     <div class="menu">
 	                    <div class="collapse navbar-collapse" id="navbar-container">
-	                    	<a class="brand" href="index.html"><img src="Logo/logo2.png" alt=Logo style="height:80px;"></a>
 	                    	<div class="pull-right">
 		                        <ul class="nav navbar-nav">
 									<li role="presentation"><a href="index.html">HOME</a></li>
@@ -60,11 +61,11 @@
 
 	<div class="container">
 		<div id="accordion" style="display:none;">
-			<h3><img class="icons" src="Desserts/brownie4.jpg" alt="icon">Best-ever brownies</h3>
+			<h3><img class="icons" src="Desserts/brownie5.jpg" alt="icon">Best-ever brownies</h3>
 			<div>
 				<div class="row">
 					<div class="col-md-6">
-						<img class="img-responsive" src="Desserts/brownie4.jpg" alt="Brownie">
+						<img class="img-responsive" src="Desserts/brownie5.jpg" alt="Brownie">
 					</div>
 					<div class="col-md-6">
 						<p><strong>Ingredients:</strong><br><br>1/2 cup butter <br>1 cup white sugar <br>2 eggs <br>1 teaspoon vanilla extract <br>1/3 cup unsweetened cocoa powder <br>1/2 cup all-purpose flour <br>1/4 teaspoon salt</p>
