--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
 <meta charset="UTF-8">
+<link rel="shortcut icon" href="Fav/favicon.ico" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>[Title]</title>
+<title>GoVeggo</title>
 <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
 
 <script type="text/javascript" src="Javascripts/jquery-1.11.3.min.js"></script><!--1stjQuery plugin-->
@@ -25,8 +26,9 @@
 
 <body>
             <nav class="navbar navbar-default" role="navigation">
-                <div class="container" color="red;">
+                <div class="container">
                     <div class="navbar-header">
+                    	<a class="brand" href="index.html"><img src="Logo/logo2.png" alt=Logo></a>
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -34,16 +36,14 @@
                         </button>
                     </div>
                     <div class="menu">
-
 	                    <div class="collapse navbar-collapse" id="navbar-container">
-	                    	<a class="brand" href="index.html"><img src="Logo/logo2.png" alt=Logo style="height:80px;"></a>
 	                    	<div class="pull-right">
-	                        <ul class="nav navbar-nav">
-								<li role="presentation"><a href="index.html">HOME</a></li>
-								<li role="presentation"><a href="casseroles.html">CASSEROLES</a></li>
-								<li role="presentation"><a href="soups.html">SOUPS</a></li>
-								<li role="presentation"><a href="desserts.html">DESSERTS</a></li>
-	                        </ul>
+		                        <ul class="nav navbar-nav">
+									<li role="presentation"><a href="index.html">HOME</a></li>
+									<li role="presentation"><a href="casseroles.html">CASSEROLES</a></li>
+									<li role="presentation"><a href="soups.html">SOUPS</a></li>
+									<li role="presentation"><a href="desserts.html">DESSERTS</a></li>
+		                        </ul>
 	                    	</div>
 	                    </div>
                 	</div>
@@ -60,19 +60,19 @@
 
 	 <div class="carousel-inner">
 	 	<div class="item active">
-	 		<img src="Carousel/Crop/vegetarianfood_rs.jpg" alt="Asparagus" class="img-responsive">
+	 		<img src="Carousel/VJ/stuff.jpg" alt="Dishes" class="img-responsive">
 	 		<div class="carousel-caption">
 	 			<h2>GoVeggo!</h2>
 	 		</div>
 	 	</div>
 	 	<div class="item">
-	 		<img src="Carousel/Crop/dessert_rs.jpg" alt="Dessert" class="img-responsive">
+	 		<img src="Carousel/VJ/pizza.jpg" alt="Pizza" class="img-responsive">
 	 		<div class="carousel-caption">
 	 			<h2>GoVeggo!</h2>
 	 		</div>
 	 	</div>
 	 	<div class="item">
-	 		<img src="Carousel/Crop/pizza_rs.jpg" alt="Pizza" class="img-responsive">
+	 		<img src="Carousel/VJ/fork.jpg" alt="Tomato" class="img-responsive">
 	 		<div class="carousel-caption">
 	 			<h2>GoVeggo!</h2>
 	 		</div>
