--- a/soups.html
+++ b/soups.html
@@ -3,6 +3,7 @@
 
 <head>
 <meta charset="UTF-8">
+<link rel="shortcut icon" href="Fav/favicon.ico" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Soups</title>
 <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
@@ -25,8 +26,9 @@
 <body id="dish">
 
             <nav class="navbar navbar-default" role="navigation">
-                <div class="container" color="red;">
+                <div class="container">
                     <div class="navbar-header">
+                    	<a class="brand" href="index.html"><img src="Logo/logo2.png" alt=Logo></a>
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -35,7 +37,6 @@
                     </div>
                     <div class="menu">
 	                    <div class="collapse navbar-collapse" id="navbar-container">
-	                    	<a class="brand" href="index.html"><img src="Logo/logo2.png" alt=Logo style="height:80px;"></a>
 	                    	<div class="pull-right">
 		                        <ul class="nav navbar-nav">
 									<li role="presentation"><a href="index.html">HOME</a></li>
