--- a/test.html
+++ b/test.html
@@ -25,8 +25,9 @@
 <body id="soups">
 
             <nav class="navbar navbar-default" role="navigation">
-                <div class="container" color="red;">
+                <div class="container">
                     <div class="navbar-header">
+                    	<a class="brand" href="index.html"><img src="Logo/logo2.png" alt=Logo></a>
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -35,7 +36,6 @@
                     </div>
                     <div class="menu">
 	                    <div class="collapse navbar-collapse" id="navbar-container">
-	                    	<a class="brand" href="index.html"><img src="Logo/logo2.png" alt=Logo style="height:80px;"></a>
 	                    	<div class="pull-right">
 		                        <ul class="nav navbar-nav">
 									<li role="presentation"><a href="index.html">HOME</a></li>
