--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div><!--container-->
             </nav><!--navbar navbar-default--> 
 
-
+<div class="carousel_block">
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
 	<ol class="carousel-indicators">
 		<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -60,7 +60,7 @@
 
 	 <div class="carousel-inner">
 	 	<div class="item active">
-	 		<img src="Carousel/VJ/stuff.jpg" alt="Dishes" class="img-responsive">
+	 		<img src="Carousel/VJ/salad.jpg" alt="Salad" class="img-responsive">
 	 		<div class="carousel-caption">
 	 			<h2>GoVeggo!</h2>
 	 		</div>
@@ -87,6 +87,7 @@
 		    <span class="sr-only">Next</span>
 		  </a>
 	</div>
+</div><!--carousel_block-->
 
 	<div class="thumbs">
 		<h1>VEGETARIAN RECIPES WHICH WILL MAKE YOU HAPPY</h1>
