--- a/index.html
+++ b/index.html
@@ -94,37 +94,37 @@
 		<div class="container">
 			<div class="row">
 			  <div class="col-md-12">
-			    <div class="thumbnail">
+			    <a href="christmas.html"><div class="thumbnail">
 			      <img class="left" src="Thumbs/tree.jpg" alt="Christmas meals">
 			      <div class="caption" id="christmas">
 			        <h2>Veggie Christmas meals</h2>
 			        <h4>Great vegetarian recipes for the <br>winter holidays</h4>
-			        <p><a href="christmas.html" class="btn btn-default" role="button">Find recipes!</a></p>
-			      </div>
+			        <!--<p><a href="christmas.html" class="btn btn-default" role="button">Find recipes!</a></p>-->
+			      </div></a>
 			    </div>
 			  </div>
 			</div>
 			<div class="row">
 			  <div class="col-md-12">
-			    <div class="thumbnail">
+			    <a href="vegan.html"><div class="thumbnail">
 			      <img id="right" src="Thumbs/dessert5.jpg" alt="Desserts">
 			      <div class="caption" id="dessert">
 			        <h2>Desserts!</h2>
 			        <h4>Vegan-friendly desserts <br>for a cozy break</h4>
-			        <p><a href="vegan.html" class="btn btn-default" role="button">Find recipes!</a></p>
-			      </div>
+			        <!--<p><a href="vegan.html" class="btn btn-default" role="button">Find recipes!</a></p>-->
+			      </div></a>
 			    </div>
 			  </div>
 			</div>
 			<div class="row">
 			  <div class="col-md-12">
-			    <div class="thumbnail">
+			    <a href="smoothies.html"><div class="thumbnail">
 			      <img class="left" src="Thumbs/smoothie3.jpg" alt="Smoothies">
 			      <div class="caption" id="sport">
 			        <h2>Smoothies</h2>
 			        <h4>Smoothie recipes to keep you fit!</h4>
-			        <p><a href="smoothies.html" class="btn btn-default" role="button">Find recipes!</a></p>
-			      </div>
+			        <!--<p><a href="smoothies.html" class="btn btn-default" role="button">Find recipes!</a></p>-->
+			      </div></a>
 			    </div>
 			  </div>
 			</div>
