--- a/christmas.html
+++ b/christmas.html
@@ -105,7 +105,7 @@
 <div id="footer">
 	<div class="row">
 		<div class="col-md-8">
-			<p>&copy; 2012-2015 ZIGMAS COOKING!</p>
+			<p>&copy; 2012-2015 GoVeggo</p>
 		</div>
 		<div class="col-md-4 pull-right">
 		  	<a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
