--- a/desserts.html
+++ b/desserts.html
@@ -53,7 +53,7 @@
     <div id="desserts_jumbotron">
     	<div class="container" id="soups_container">
     		<div class="col-md-12">
-			<h1>Top-rated dessert recipes to satisfy<br>your taste buds</h1>  
+			<h1>Top-rated dessert recipes to satisfy your taste buds</h1>  
 			</div>  	
 	    	<div class="jumbotron"></div>
 	    </div>
@@ -105,7 +105,7 @@
 <div id="footer">
 	<div class="row">
 		<div class="col-md-8">
-			<p>&copy; 2012-2015 ZIGMAS COOKING!</p>
+			<p>&copy; 2012-2015 GoVeggo</p>
 		</div>
 		<div class="col-md-4 pull-right">
 		  	<a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
