--- a/index1.html
+++ b/index1.html
@@ -3,9 +3,8 @@
 
 <head>
 <meta charset="UTF-8">
-<link rel="shortcut icon" href="Fav/favicon.ico" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>GoVeggo</title>
+<title>[Title]</title>
 <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
 
 <script type="text/javascript" src="Javascripts/jquery-1.11.3.min.js"></script><!--1stjQuery plugin-->
@@ -15,11 +14,12 @@
 <link href="Javascripts/Adipoli1/adipoli.css" rel="stylesheet" type="text/css"/><!--adipoli-->
 <script src="Javascripts/Adipoli1/jquery.adipoli.js" type="text/javascript"></script><!--adipoli-->
 <script src="Javascripts/Adipoli1/jquery.adipoli.min.js" type="text/javascript"></script><!--adipoli-->
-<script src="Javascripts/jquery.waitforimages.min.js" type="text/javascript"></script>
+
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+</head>
 <link rel="stylesheet" href="main.css">
 </head>
 
@@ -49,7 +49,6 @@
                 </div><!--container-->
             </nav><!--navbar navbar-default--> 
 
-<div class="carousel_block">
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
 	<ol class="carousel-indicators">
 		<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -59,7 +58,7 @@
 
 	 <div class="carousel-inner">
 	 	<div class="item active">
-	 		<img src="Carousel/VJ/salad.jpg" alt="Salad" class="img-responsive">
+	 		<img src="Carousel/VJ/stuff.jpg" alt="Dishes" class="img-responsive">
 	 		<div class="carousel-caption">
 	 			<h2>GoVeggo!</h2>
 	 		</div>
@@ -86,44 +85,43 @@
 		    <span class="sr-only">Next</span>
 		  </a>
 	</div>
-</div><!--carousel_block-->
 
 	<div class="thumbs">
 		<h1>VEGETARIAN RECIPES WHICH WILL MAKE YOU HAPPY</h1>
 		<div class="container">
 			<div class="row">
 			  <div class="col-md-12">
-			    <a href="christmas.html"><div class="thumbnail">
+			    <div class="thumbnail">
 			      <img class="left" src="Thumbs/tree.jpg" alt="Christmas meals">
 			      <div class="caption" id="christmas">
 			        <h2>Veggie Christmas meals</h2>
 			        <h4>Great vegetarian recipes for the <br>winter holidays</h4>
-			        <!--<p><a href="christmas.html" class="btn btn-default" role="button">Find recipes!</a></p>-->
-			      </div></a>
+			        <p><a href="christmas.html" class="btn btn-default" role="button">Find recipes!</a></p>
+			      </div>
 			    </div>
 			  </div>
 			</div>
 			<div class="row">
 			  <div class="col-md-12">
-			    <a href="vegan.html"><div class="thumbnail">
+			    <div class="thumbnail">
 			      <img id="right" src="Thumbs/dessert5.jpg" alt="Desserts">
 			      <div class="caption" id="dessert">
 			        <h2>Desserts!</h2>
 			        <h4>Vegan-friendly desserts <br>for a cozy break</h4>
-			        <!--<p><a href="vegan.html" class="btn btn-default" role="button">Find recipes!</a></p>-->
-			      </div></a>
+			        <p><a href="vegan.html" class="btn btn-default" role="button">Find recipes!</a></p>
+			      </div>
 			    </div>
 			  </div>
 			</div>
 			<div class="row">
 			  <div class="col-md-12">
-			    <a href="smoothies.html"><div class="thumbnail">
+			    <div class="thumbnail">
 			      <img class="left" src="Thumbs/smoothie3.jpg" alt="Smoothies">
 			      <div class="caption" id="sport">
 			        <h2>Smoothies</h2>
 			        <h4>Smoothie recipes to keep you fit!</h4>
-			        <!--<p><a href="smoothies.html" class="btn btn-default" role="button">Find recipes!</a></p>-->
-			      </div></a>
+			        <p><a href="smoothies.html" class="btn btn-default" role="button">Find recipes!</a></p>
+			      </div>
 			    </div>
 			  </div>
 			</div>
@@ -133,7 +131,7 @@
 	<div id="footer">
 		<div class="row">
 			<div class="col-md-8">
-				<p>&copy; 2015 GoVeggo</p>
+				<p>&copy; 2012-2015 ZIGMAS COOKING!</p>
 			</div>
 			<div class="col-md-4 pull-right">
 			  	<a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
