--- a/casseroles.html
+++ b/casseroles.html
@@ -3,23 +3,14 @@
 
 <head>
 <meta charset="UTF-8">
-<link rel="shortcut icon" href="Fav/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="images/Fav/favicon.ico" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Casseroles</title>
 <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=PT+Sans:700' rel='stylesheet' type='text/css'>
-
-<script type="text/javascript" src="Javascripts/jquery-1.11.3.min.js"></script><!--1stjQuery plugin-->
 <link rel="stylesheet" href="Javascripts/UI/jquery-ui-1.11.4.custom/jquery-ui.css">
-<script src="Javascripts/UI/jquery-ui.min.js"></script>
-<!--<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>-->
-<script type="text/javascript" src="main.js"></script><!--2ndcustom jQ-->
-
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-<link rel="stylesheet" href="main.css">
-
+<link rel="stylesheet" href="styles/main.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
@@ -28,7 +19,7 @@
             <nav class="navbar navbar-default" role="navigation">
                 <div class="container">
                     <div class="navbar-header">
-                    	<a class="brand" href="index.html"><img src="Logo/logo2.png" alt=Logo></a>
+                    	<a class="brand" href="index.html"><img src="images/Logo/logo2.png" alt=Logo></a>
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -61,11 +52,11 @@
 
 	<div class="container">
 		<div id="accordion" style="display:none;">
-			<h3><img class="icons" src="Casseroles/root1.jpg" alt="icon">Spicy root & lentil casserole</h3>
+			<h3><img class="icons" src="images/Casseroles/root1.jpg" alt="icon">Spicy root & lentil casserole</h3>
 			<div>
 				<div class="row">
 					<div class="col-md-6">
-						<img class="img-responsive" src="Casseroles/root1.jpg" alt="Root casserole">
+						<img class="img-responsive" src="images/Casseroles/root1.jpg" alt="Root casserole">
 					</div>
 					<div class="col-md-6">
 						<p><strong>Ingredients:</strong><br><br> 2 tbsp sunflower or vegetable oil <br>1 onion, chopped <br>2 garlic clove, crushed <br>700g potatoes, peeled and cut into chunks <br>4 carrot, thickly sliced <br>2 parsnip, thickly sliced <br>2 tbsp curry paste or powder <br>1 litre/1¾ pints vegetable stock <br>100g red lentils <br>a small bunch of fresh coriander, roughly chopped <br>low-fat yogurt <br>and naan bread, to serve</p>
@@ -73,11 +64,11 @@
 					</div>
 				</div>
 			</div>
-			<h3><img class="icons" src="Casseroles/squash.jpg" alt="icon">Butternut squash casserole</h3>
+			<h3><img class="icons" src="images/Casseroles/squash.jpg" alt="icon">Butternut squash casserole</h3>
 			<div>
 				<div class="row">
 					<div class="col-md-6">
-						<img class="img-responsive" src="Casseroles/squash.jpg" alt="Squash casserole">
+						<img class="img-responsive" src="images/Casseroles/squash.jpg" alt="Squash casserole">
 					</div>
 					<div class="col-md-6">
 						<p><strong>Ingredients:</strong><br><br>2 tbsp olive oil <br>1 onion, sliced <br>2 garlic <br>cloves, crushed <br>1 tsp cumin seeds <br>1 tbsp paprika <br>225g sweet potato, cubed <br>1 red pepper, deseeded and chopped <br>1 butternut squash (about 550g/1lb 4oz), peeled and chopped <br>400g can chopped tomato <br>200ml red wine <br>300ml vegetable stock<br>75g bulghar wheat</p>
@@ -86,11 +77,11 @@
 				</div>
 			</div>
 
-			<h3><img class="icons" src="Casseroles/onion.jpg" alt="icon">Spring Onion Pie</h3>
+			<h3><img class="icons" src="images/Casseroles/onion.jpg" alt="icon">Spring Onion Pie</h3>
 			<div>
 				<div class="row">
 					<div class="col-md-6">
-						<img class="img-responsive" src="Casseroles/onion.jpg" alt="Casserole">
+						<img class="img-responsive" src="images/Casseroles/onion.jpg" alt="Casserole">
 					</div>
 					<div class="col-md-6">
 						<p><strong>Ingredients:</strong><br><br>10 thin spring onions<br>4 large eggs, lightly beaten $<br>1 cup milk<br>3/4 cup all-purpose flour<br>1 teaspoon kosher salt<br>1/2 teaspoon baking powder $<br>1/4 teaspoon freshly ground pepper<br>2 tablespoons butter $<br>5 ounces Gruyere cheese, cubed</p>
@@ -114,6 +105,9 @@
 	</div>
 </div>
 
+<script type="text/javascript" src="Javascripts/jquery-1.11.3.min.js"></script><!--1stjQuery plugin-->
+<script src="Javascripts/UI/jquery-ui.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+<script type="text/javascript" src="Javascripts/main.js"></script><!--2ndcustom jQ-->
 </body>
 </html>
