--- a/soups.html
+++ b/soups.html
@@ -3,24 +3,15 @@
 
 <head>
 <meta charset="UTF-8">
-<link rel="shortcut icon" href="Fav/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="images/Fav/favicon.ico" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Soups</title>
 <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=PT+Sans:700' rel='stylesheet' type='text/css'>
-
-<script type="text/javascript" src="Javascripts/jquery-1.11.3.min.js"></script><!--1stjQuery plugin-->
 <link rel="stylesheet" href="Javascripts/UI/jquery-ui-1.11.4.custom/jquery-ui.css">
-<script src="Javascripts/UI/jquery-ui.min.js"></script>
-<!--<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>-->
-<script type="text/javascript" src="main.js"></script><!--2ndcustom jQ-->
-
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-<link rel="stylesheet" href="main.css">
-
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body id="dish">
@@ -28,7 +19,7 @@
             <nav class="navbar navbar-default" role="navigation">
                 <div class="container">
                     <div class="navbar-header">
-                    	<a class="brand" href="index.html"><img src="Logo/logo2.png" alt=Logo></a>
+                    	<a class="brand" href="index.html"><img src="images/Logo/logo2.png" alt=Logo></a>
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -61,11 +52,11 @@
 
 	<div class="container">
 		<div id="accordion" style="display:none;">
-			<h3><img class="icons" src="Soups/lentil.jpg" alt="icon">Green-lentil soup with coconut milk and Indian Spices</h3>
+			<h3><img class="icons" src="images/Soups/lentil.jpg" alt="icon">Green-lentil soup with coconut milk and Indian Spices</h3>
 			<div>
 				<div class="row">
 					<div class="col-md-6">
-						<img class="img-responsive" src="Soups/lentil.jpg" alt="Lentil soup">
+						<img class="img-responsive" src="images/Soups/lentil.jpg" alt="Lentil soup">
 					</div>
 					<div class="col-md-6">
 						<p><strong>Ingredients:</strong><br><br> 3 tablespoons unsalted butter<br> 1 large onion, finely diced<br> 2 garlic cloves, finely minced<br> 1 tablespoon fresh thyme, finely chopped<br> 1 and 1/2 teaspoons ground turmeric<br> 6 cups vegetable broth<br> 1 and 1/2 cups French green lentils<br> 2 tablespoons ghee, clarified, or unsalted butter<br> 1/2 teaspoon ground cardamom<br> 1/4 teaspoon ground cinnamon<br> 1/4 teaspoon ground cloves<br> pinch of ground nutmeg<br>fresh black pepper<br> 1 cup full-fat canned coconut milk<br> salt</p>
@@ -73,11 +64,11 @@
 					</div>
 				</div>
 			</div>
-			<h3><img class="icons" src="Soups/pumpkin.jpg" alt="icon">Creamy pumpkin & lentil soup</h3>
+			<h3><img class="icons" src="images/Soups/pumpkin.jpg" alt="icon">Creamy pumpkin & lentil soup</h3>
 			<div>
 				<div class="row">
 					<div class="col-md-6">
-						<img class="img-responsive" src="Soups/pumpkin.jpg" alt="Pumpkin soup">
+						<img class="img-responsive" src="images/Soups/pumpkin.jpg" alt="Pumpkin soup">
 					</div>
 					<div class="col-md-6">
 						<p><strong>Ingredients:</strong><br><br>Olive oil<br> 2 onion, chopped <br>2 garlic cloves, chopped <br>approx 800g chopped pumpkin flesh, plus the seeds <br>100g split red lentil <br>½ small pack thyme, leaves picked, plus extra to serve <br>1l hot vegetable stock <br>pinch of salt and sugar <br>50g crème fraîche, plus extra to serve</p>
@@ -86,11 +77,11 @@
 				</div>
 			</div>
 
-			<h3><img class="icons" src="Soups/zuc1.jpg" alt="icon">Zucchini soup</h3>
+			<h3><img class="icons" src="images/Soups/zuc1.jpg" alt="icon">Zucchini soup</h3>
 			<div>
 				<div class="row">
 					<div class="col-md-6">
-						<img class="img-responsive" src="Soups/zuc1.jpg" alt="Zucchini soup">
+						<img class="img-responsive" src="images/Soups/zuc1.jpg" alt="Zucchini soup">
 					</div>
 					<div class="col-md-6">
 						<p><strong>Ingredients:</strong><br><br>4 tablespoons unsalted butter<br>1 white onion, sliced<br>8 to 9 large cloves garlic, sliced thinly  <br>4 medium zucchini <br>4 cups vegetable broth <br>1/2 teaspoon powdered ginger <br>Salt and pepper</p>
@@ -100,16 +91,6 @@
 			</div>
 		</div>
 </div><!--container-->
-
-<!--<div class="panel panel-default">
-  	<div class="panel-footer">
-  		<div class="social">
-  			<p>&copy; 2012-2015 ZIGMAS COOKING!</p>
-	  		<a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
-	  		<a href="#"><i class="fa fa-twitter fa-2x"></i></a>
-  		</div>
-	</div>
-</div>-->
 
 <div id="footer">
 	<div class="row">
@@ -123,6 +104,9 @@
 	</div>
 </div>
 
+<script type="text/javascript" src="Javascripts/jquery-1.11.3.min.js"></script><!--1stjQuery plugin-->
+<script src="Javascripts/UI/jquery-ui.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+<script type="text/javascript" src="Javascripts/main.js"></script><!--2ndcustom jQ-->
 </body>
 </html>
