--- a/vegan.html
+++ b/vegan.html
@@ -3,24 +3,15 @@
 
 <head>
 <meta charset="UTF-8">
-<link rel="shortcut icon" href="Fav/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="images/Fav/favicon.ico" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Vegan desserts</title>
 <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=PT+Sans:700' rel='stylesheet' type='text/css'>
-
-<script type="text/javascript" src="Javascripts/jquery-1.11.3.min.js"></script><!--1stjQuery plugin-->
 <link rel="stylesheet" href="Javascripts/UI/jquery-ui-1.11.4.custom/jquery-ui.css">
-<script src="Javascripts/UI/jquery-ui.min.js"></script>
-<!--<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>-->
-<script type="text/javascript" src="main.js"></script><!--2ndcustom jQ-->
-
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-<link rel="stylesheet" href="main.css">
-
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body id="dish">
@@ -28,7 +19,7 @@
             <nav class="navbar navbar-default" role="navigation">
                 <div class="container">
                     <div class="navbar-header">
-                    	<a class="brand" href="index.html"><img src="Logo/logo2.png" alt=Logo></a>
+                    	<a class="brand" href="index.html"><img src="images/Logo/logo2.png" alt=Logo></a>
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -61,11 +52,11 @@
 
 	<div class="container">
 		<div id="accordion" style="display:none;">
-			<h3><img class="icons" src="Vegan/rhubarb.jpg" alt="icon">Vegan rhubarb & custard bake</h3>
+			<h3><img class="icons" src="images/Vegan/rhubarb.jpg" alt="icon">Vegan rhubarb & custard bake</h3>
 			<div>
 				<div class="row">
 					<div class="col-md-6">
-						<img class="img-responsive" src="Vegan/rhubarb.jpg" alt="Rhubarb pie">
+						<img class="img-responsive" src="images/Vegan/rhubarb.jpg" alt="Rhubarb pie">
 					</div>
 					<div class="col-md-6">
 						<p><strong>Ingredients:</strong><br><br>250g rhubarb, cut into 1in lengths<br>275g golden caster sugar<br>1 tsp vanilla<br>bean paste<br>250g vegan margarine, plus extra for greasing<br>2 tbsp ground flaxseed<br>150g soya custard, plus extra to serve (optional)<br>250g self-raising flour<br>1 tsp baking powder<br>1 tsp vanilla extract<br>130g unsweetened apple sauce<br>cing sugar, to serve (optional)</p>
@@ -73,11 +64,11 @@
 					</div>
 				</div>
 			</div>
-			<h3><img class="icons" src="Vegan/torte.jpg" alt="icon">Choc-cherry fudge torte with cherry sorbet</h3>
+			<h3><img class="icons" src="images/Vegan/torte.jpg" alt="icon">Choc-cherry fudge torte with cherry sorbet</h3>
 			<div>
 				<div class="row">
 					<div class="col-md-6">
-						<img class="img-responsive" src="Vegan/torte.jpg" alt="Fudge torte">
+						<img class="img-responsive" src="images/Vegan/torte.jpg" alt="Fudge torte">
 					</div>
 					<div class="col-md-6">
 						<p><strong>Ingredients:</strong><br><br>100g dried sour cherry<br>5 tbsp brandy<br>300g gluten- and wheat-free plain flour (we used Doves Farm)<br>85g cocoa, plus extra for dusting<br>200g light soft brown sugar<br>1 tsp gluten-free baking powder<br>1 tsp gluten-free bicarbonate of soda<br>1 tsp xanthan gum<br>150ml sunflower oil<br>350ml rice milk (preferably unsweetened)<br>150ml agave syrup<br>a little icing sugar, for dusting<br><br><strong>For the sorbet:</strong><br><br>2 x 600g jars cherry compote<br>200g caster sugar</p>
@@ -86,11 +77,11 @@
 				</div>
 			</div>
 
-			<h3><img class="icons" src="Vegan/cakes.jpg" alt="icon">Vegan banana & peanut butter cupcakes</h3>
+			<h3><img class="icons" src="images/Vegan/cakes.jpg" alt="icon">Vegan banana & peanut butter cupcakes</h3>
 			<div>
 				<div class="row">
 					<div class="col-md-6">
-						<img class="img-responsive" src="Vegan/cakes.jpg" alt="Cupcakes">
+						<img class="img-responsive" src="images/Vegan/cakes.jpg" alt="Cupcakes">
 					</div>
 					<div class="col-md-6">
 						<p><strong>Ingredients:</strong><br><br>240g self-raising flour<br>140g golden caster sugar<br>1 tsp bicarbonate of soda<br>240g egg-free mayonnaise<br>2 large or 3 small ripe banana, mashed<br>1 tsp vanilla extract<br>25g vegan dark chocolate chip<br><br><strong>For the icing:</strong><br><br>80g vegan margarine<br>250g icing sugar<br>25ml vegan milk (we used almond milk)<br>2 tbsp smooth peanut butter</p>
@@ -114,6 +105,9 @@
 	</div>
 </div>
 
+<script type="text/javascript" src="Javascripts/jquery-1.11.3.min.js"></script><!--1stjQuery plugin-->
+<script src="Javascripts/UI/jquery-ui.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+<script type="text/javascript" src="Javascripts/main.js"></script><!--2ndcustom jQ-->
 </body>
 </html>
