--- a/christmas.html
+++ b/christmas.html
@@ -3,24 +3,15 @@
 
 <head>
 <meta charset="UTF-8">
-<link rel="shortcut icon" href="Fav/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="images/Fav/favicon.ico" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Christmas meals</title>
 <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=PT+Sans:700' rel='stylesheet' type='text/css'>
-
-<script type="text/javascript" src="Javascripts/jquery-1.11.3.min.js"></script><!--1stjQuery plugin-->
 <link rel="stylesheet" href="Javascripts/UI/jquery-ui-1.11.4.custom/jquery-ui.css">
-<script src="Javascripts/UI/jquery-ui.min.js"></script>
-<!--<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>-->
-<script type="text/javascript" src="main.js"></script><!--2ndcustom jQ-->
-
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-<link rel="stylesheet" href="main.css">
-
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body id="dish">
@@ -28,7 +19,7 @@
             <nav class="navbar navbar-default" role="navigation">
                 <div class="container">
                     <div class="navbar-header">
-                    	<a class="brand" href="index.html"><img src="Logo/logo2.png" alt=Logo></a>
+                    	<a class="brand" href="index.html"><img src="images/Logo/logo2.png" alt=Logo></a>
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -61,11 +52,11 @@
 
 	<div class="container">
 		<div id="accordion" style="display:none;">
-			<h3><img class="icons" src="Christmas/slaw.jpg" alt="icon">Christmas slaw</h3>
+			<h3><img class="icons" src="images/Christmas/slaw.jpg" alt="icon">Christmas slaw</h3>
 			<div>
 				<div class="row">
 					<div class="col-md-6">
-						<img class="img-responsive" src="Christmas/slaw.jpg" alt="Slaw">
+						<img class="img-responsive" src="images/Christmas/slaw.jpg" alt="Slaw">
 					</div>
 					<div class="col-md-6">
 						<p><strong>Ingredients:</strong><br><br>2 carrots, halved<br>½ white cabbage, shredded<br>100g pecans, roughly chopped<br>bunch spring onions, sliced<br>2 red peppers, deseeded and sliced<br><br><strong>For the dressing:</strong><br><br>2 tbsp maple syrup<br>2 tsp Dijon mustard<br>8 tbsp olive oil<br>4 tbsp cider vinegar</p>
@@ -73,11 +64,11 @@
 					</div>
 				</div>
 			</div>
-			<h3><img class="icons" src="Christmas/pudding.jpg" alt="icon">7-cup Christmas pudding</h3>
+			<h3><img class="icons" src="images/Christmas/pudding.jpg" alt="icon">7-cup Christmas pudding</h3>
 			<div>
 				<div class="row">
 					<div class="col-md-6">
-						<img class="img-responsive" src="Christmas/pudding.jpg" alt="Pudding">
+						<img class="img-responsive" src="images/Christmas/pudding.jpg" alt="Pudding">
 					</div>
 					<div class="col-md-6">
 						<p><strong>Ingredients:</strong><br><br>1 cup raisins<br>1 cup sultanas<br>1 cup self-raising flour<br>1 cup finely grated butter (about 115g)<br>1 cup fresh brown breadcrumbs (from around 4 thick slices of bread)<br>1 cup light muscovado sugar<br>1 cup mixed nuts, chopped plus extra to decorate<br>1 tsp ground cinnamon<br>1 tsp groud mixed spice<br>1 cup milk<br>1 large egg<br>butter, for greasing</p>
@@ -86,11 +77,11 @@
 				</div>
 			</div>
 
-			<h3><img class="icons" src="Christmas/boxing.jpg" alt="icon">Boxing Day soup</h3>
+			<h3><img class="icons" src="images/Christmas/boxing.jpg" alt="icon">Boxing Day soup</h3>
 			<div>
 				<div class="row">
 					<div class="col-md-6">
-						<img class="img-responsive" src="Christmas/boxing.jpg" alt="Soup">
+						<img class="img-responsive" src="images/Christmas/boxing.jpg" alt="Soup">
 					</div>
 					<div class="col-md-6">
 						<p><strong>Ingredients:</strong><br><br>1 tbsp sunflower oil<br>1 medium onion, chopped<br>2 celery sticks, chopped<br>2 medium potato, about 350g total weight, peeled and cut into small chunks<br>1 tbsp curry paste<br>1.2l vegetable stock, made from a stock cube<br>550g leftover roasted or boiled vegetables, such as Brussels sprout, carrots, parsnips and squash, roughly chopped<br>natural yogurt or crème fraîche, to serve</p>
@@ -114,6 +105,9 @@
 	</div>
 </div>
 
+<script type="text/javascript" src="Javascripts/jquery-1.11.3.min.js"></script><!--1stjQuery plugin-->
+<script src="Javascripts/UI/jquery-ui.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+<script type="text/javascript" src="Javascripts/main.js"></script><!--2ndcustom jQ-->
 </body>
 </html>
