--- a/desserts.html
+++ b/desserts.html
@@ -3,24 +3,15 @@
 
 <head>
 <meta charset="UTF-8">
-<link rel="shortcut icon" href="Fav/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="images/Fav/favicon.ico" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Desserts</title>
 <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=PT+Sans:700' rel='stylesheet' type='text/css'>
-
-<script type="text/javascript" src="Javascripts/jquery-1.11.3.min.js"></script><!--1stjQuery plugin-->
 <link rel="stylesheet" href="Javascripts/UI/jquery-ui-1.11.4.custom/jquery-ui.css">
-<script src="Javascripts/UI/jquery-ui.min.js"></script>
-<!--<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>-->
-<script type="text/javascript" src="main.js"></script><!--2ndcustom jQ-->
-
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-<link rel="stylesheet" href="main.css">
-
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body id="dish">
@@ -28,7 +19,7 @@
             <nav class="navbar navbar-default" role="navigation">
                 <div class="container">
                     <div class="navbar-header">
-                    	<a class="brand" href="index.html"><img src="Logo/logo2.png" alt=Logo></a>
+                    	<a class="brand" href="index.html"><img src="images/Logo/logo2.png" alt=Logo></a>
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -61,11 +52,11 @@
 
 	<div class="container">
 		<div id="accordion" style="display:none;">
-			<h3><img class="icons" src="Desserts/brownie5.jpg" alt="icon">Best-ever brownies</h3>
+			<h3><img class="icons" src="images/Desserts/brownie5.jpg" alt="icon">Best-ever brownies</h3>
 			<div>
 				<div class="row">
 					<div class="col-md-6">
-						<img class="img-responsive" src="Desserts/brownie5.jpg" alt="Brownie">
+						<img class="img-responsive" src="images/Desserts/brownie5.jpg" alt="Brownie">
 					</div>
 					<div class="col-md-6">
 						<p><strong>Ingredients:</strong><br><br>1/2 cup butter <br>1 cup white sugar <br>2 eggs <br>1 teaspoon vanilla extract <br>1/3 cup unsweetened cocoa powder <br>1/2 cup all-purpose flour <br>1/4 teaspoon salt</p>
@@ -73,11 +64,11 @@
 					</div>
 				</div>
 			</div>
-			<h3><img class="icons" src="Desserts/tiramisu2.jpg" alt="icon">Sunshine tiramisu</h3>
+			<h3><img class="icons" src="images/Desserts/tiramisu2.jpg" alt="icon">Sunshine tiramisu</h3>
 			<div>
 				<div class="row">
 					<div class="col-md-6">
-						<img class="img-responsive" src="Desserts/tiramisu2.jpg" alt="Tiramisu">
+						<img class="img-responsive" src="images/Desserts/tiramisu2.jpg" alt="Tiramisu">
 					</div>
 					<div class="col-md-6">
 						<p><strong>Ingredients:</strong><br><br>6 egg yolks<br>3/4 cup white sugar<br>2/3 cup milk<br>1 1/4 cups heavy cream<br>1/2 teaspoon vanilla extract<br>1 pound mascarpone cheese<br>1/4 cup strong brewed coffee, room temperature<br>2 tablespoons rum<br>2 packages ladyfinger cookies<br>1 tablespoon unsweetened cocoa powder</p>
@@ -86,11 +77,11 @@
 				</div>
 			</div>
 
-			<h3><img class="icons" src="Desserts/flan.jpg" alt="icon">Spanish flan</h3>
+			<h3><img class="icons" src="images/Desserts/flan.jpg" alt="icon">Spanish flan</h3>
 			<div>
 				<div class="row">
 					<div class="col-md-6">
-						<img class="img-responsive" src="Desserts/flan.jpg" alt="Spanish flan">
+						<img class="img-responsive" src="images/Desserts/flan.jpg" alt="Spanish flan">
 					</div>
 					<div class="col-md-6">
 						<p><strong>Ingredients:</strong><br><br>1 cup white sugar<br>3 eggs<br>1 can sweetened condensed milk<br>1 can evaporated milk<br>1 tablespoon vanilla extract</p>
@@ -114,6 +105,9 @@
 	</div>
 </div>
 
+<script type="text/javascript" src="Javascripts/jquery-1.11.3.min.js"></script><!--1stjQuery plugin-->
+<script src="Javascripts/UI/jquery-ui.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+<script type="text/javascript" src="Javascripts/main.js"></script><!--2ndcustom jQ-->
 </body>
 </html>
