--- a/index.html
+++ b/index.html
@@ -3,30 +3,21 @@
 
 <head>
 <meta charset="UTF-8">
-<link rel="shortcut icon" href="Fav/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="images/Fav/favicon.ico" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>GoVeggo</title>
 <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
-
-<script type="text/javascript" src="Javascripts/jquery-1.11.3.min.js"></script><!--1stjQuery plugin-->
-
-<script type="text/javascript" src="main.js"></script><!--2ndcustom jQ-->
-
 <link href="Javascripts/Adipoli1/adipoli.css" rel="stylesheet" type="text/css"/><!--adipoli-->
-<script src="Javascripts/Adipoli1/jquery.adipoli.js" type="text/javascript"></script><!--adipoli-->
-<script src="Javascripts/Adipoli1/jquery.adipoli.min.js" type="text/javascript"></script><!--adipoli-->
-
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
             <nav class="navbar navbar-default" role="navigation">
                 <div class="container">
                     <div class="navbar-header">
-                    	<a class="brand" href="index.html"><img src="Logo/logo2.png" alt=Logo></a>
+                    	<a class="brand" href="index.html"><img src="images/Logo/logo2.png" alt=Logo></a>
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -58,19 +49,19 @@
 
 	 <div class="carousel-inner">
 	 	<div class="item active">
-	 		<img src="Carousel/VJ/salad.jpg" alt="Salad" class="img-responsive">
+	 		<img src="images/Carousel/salad.jpg" alt="Salad" class="img-responsive">
 	 		<div class="carousel-caption">
 	 			<h2>GoVeggo!</h2>
 	 		</div>
 	 	</div>
 	 	<div class="item">
-	 		<img src="Carousel/VJ/pizza.jpg" alt="Pizza" class="img-responsive">
+	 		<img src="images/Carousel/pizza.jpg" alt="Pizza" class="img-responsive">
 	 		<div class="carousel-caption">
 	 			<h2>GoVeggo!</h2>
 	 		</div>
 	 	</div>
 	 	<div class="item">
-	 		<img src="Carousel/VJ/fork.jpg" alt="Tomato" class="img-responsive">
+	 		<img src="images/Carousel/fork.jpg" alt="Tomato" class="img-responsive">
 	 		<div class="carousel-caption">
 	 			<h2>GoVeggo!</h2>
 	 		</div>
@@ -93,11 +84,10 @@
 			<div class="row">
 			  <div class="col-md-12">
 			    <a href="christmas.html"><div class="thumbnail">
-			      <img class="left" src="Thumbs/tree.jpg" alt="Christmas meals">
+			      <img class="left" src="images/Thumbs/tree.jpg" alt="Christmas meals">
 			      <div class="caption" id="christmas">
 			        <h2>Veggie Christmas meals</h2>
 			        <h4>Great vegetarian recipes for the <br>winter holidays</h4>
-			        <!--<p><a href="christmas.html" class="btn btn-default" role="button">Find recipes!</a></p>-->
 			      </div></a>
 			    </div>
 			  </div>
@@ -105,11 +95,10 @@
 			<div class="row">
 			  <div class="col-md-12">
 			    <a href="vegan.html"><div class="thumbnail">
-			      <img id="right" src="Thumbs/dessert5.jpg" alt="Desserts">
+			      <img id="right" src="images/Thumbs/dessert5.jpg" alt="Desserts">
 			      <div class="caption" id="dessert">
 			        <h2>Desserts!</h2>
 			        <h4>Vegan-friendly desserts <br>for a cozy break</h4>
-			        <!--<p><a href="vegan.html" class="btn btn-default" role="button">Find recipes!</a></p>-->
 			      </div></a>
 			    </div>
 			  </div>
@@ -117,11 +106,10 @@
 			<div class="row">
 			  <div class="col-md-12">
 			    <a href="smoothies.html"><div class="thumbnail">
-			      <img class="left" src="Thumbs/smoothie3.jpg" alt="Smoothies">
+			      <img class="left" src="images/Thumbs/smoothie3.jpg" alt="Smoothies">
 			      <div class="caption" id="sport">
 			        <h2>Smoothies</h2>
 			        <h4>Smoothie recipes to keep you fit!</h4>
-			        <!--<p><a href="smoothies.html" class="btn btn-default" role="button">Find recipes!</a></p>-->
 			      </div></a>
 			    </div>
 			  </div>
@@ -141,7 +129,11 @@
 		</div>
 	</div>
 
-
+<script type="text/javascript" src="Javascripts/jquery-1.11.3.min.js"></script><!--1stjQuery plugin-->
+<script src="Javascripts/Adipoli1/jquery.adipoli.js" type="text/javascript"></script><!--adipoli-->
+<script src="Javascripts/Adipoli1/jquery.adipoli.min.js" type="text/javascript"></script><!--adipoli-->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+<script type="text/javascript" src="Javascripts/main.js"></script><!--2ndcustom jQ-->
+
 </body>
 </html>
