--- a/smoothies.html
+++ b/smoothies.html
@@ -3,24 +3,15 @@
 
 <head>
 <meta charset="UTF-8">
-<link rel="shortcut icon" href="Fav/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="images/Fav/favicon.ico" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Smoothies</title>
 <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=PT+Sans:700' rel='stylesheet' type='text/css'>
-
-<script type="text/javascript" src="Javascripts/jquery-1.11.3.min.js"></script><!--1stjQuery plugin-->
 <link rel="stylesheet" href="Javascripts/UI/jquery-ui-1.11.4.custom/jquery-ui.css">
-<script src="Javascripts/UI/jquery-ui.min.js"></script>
-<!--<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>-->
-<script type="text/javascript" src="main.js"></script><!--2ndcustom jQ-->
-
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-<link rel="stylesheet" href="main.css">
-
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body id="dish">
@@ -28,7 +19,7 @@
             <nav class="navbar navbar-default" role="navigation">
                 <div class="container">
                     <div class="navbar-header">
-                    	<a class="brand" href="index.html"><img src="Logo/logo2.png" alt=Logo></a>
+                    	<a class="brand" href="index.html"><img src="images/Logo/logo2.png" alt=Logo></a>
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -61,11 +52,11 @@
 
 	<div class="container">
 		<div id="accordion" style="display:none;">
-			<h3><img class="icons" src="Smoothies/banana.jpg" alt="icon">Banana, honey & hazelnut smoothie</h3>
+			<h3><img class="icons" src="images/Smoothies/banana.jpg" alt="icon">Banana, honey & hazelnut smoothie</h3>
 			<div>
 				<div class="row">
 					<div class="col-md-6">
-						<img class="img-responsive" src="Smoothies/banana.jpg" alt="Smoothie">
+						<img class="img-responsive" src="images/Smoothies/banana.jpg" alt="Smoothie">
 					</div>
 					<div class="col-md-6">
 						<p><strong>Ingredients:</strong><br><br>1 peeled, sliced banana<br>250ml soya milk<br>1 tsp honey<br>a little grated nutmeg<br>2 tsp chopped hazelnuts, to serve</p>
@@ -73,11 +64,11 @@
 					</div>
 				</div>
 			</div>
-			<h3><img class="icons" src="Smoothies/green.jpg" alt="icon">Green smoothie</h3>
+			<h3><img class="icons" src="images/Smoothies/green.jpg" alt="icon">Green smoothie</h3>
 			<div>
 				<div class="row">
 					<div class="col-md-6">
-						<img class="img-responsive" src="Smoothies/green.jpg" alt="Smoothie">
+						<img class="img-responsive" src="images/Smoothies/green.jpg" alt="Smoothie">
 					</div>
 					<div class="col-md-6">
 						<p><strong>Ingredients:</strong><br><br>250ml milk of your choice (we used unsweetened almond milk)<br>1 tbsp ground flaxseed<br>1 tsp maca powder (optional)<br>pinch ground cinnamon<br>1 Medjool date, stoned<br>1 small ripe banana<br>handful of spinach<br>1 tbsp almond butter</p>
@@ -86,11 +77,11 @@
 				</div>
 			</div>
 
-			<h3><img class="icons" src="Smoothies/berry.jpg" alt="icon">Breakfast smoothie</h3>
+			<h3><img class="icons" src="images/Smoothies/berry.jpg" alt="icon">Breakfast smoothie</h3>
 			<div>
 				<div class="row">
 					<div class="col-md-6">
-						<img class="img-responsive" src="Smoothies/berry.jpg" alt="Smoothie">
+						<img class="img-responsive" src="images/Smoothies/berry.jpg" alt="Smoothie">
 					</div>
 					<div class="col-md-6">
 						<p><strong>Ingredients:</strong><br><br>1 small ripe banana<br>about 140g blackberries, blueberries, raspberries or strawberries (or use a mix), plus extra to serve<br>apple juice or mineral water, optional<br>runny honey, to serve</p>
@@ -114,6 +105,9 @@
 	</div>
 </div>
 
+<script type="text/javascript" src="Javascripts/jquery-1.11.3.min.js"></script><!--1stjQuery plugin-->
+<script src="Javascripts/UI/jquery-ui.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+<script type="text/javascript" src="Javascripts/main.js"></script><!--2ndcustom jQ-->
 </body>
 </html>
