--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav class="navbar navbar-default" role="navigation">
                 <div class="container">
                     <div class="navbar-header">
-                    	<a class="brand" href="index.html"><img src="images/Logo/logo2.png" alt=Logo></a>
+                    	<a class="brand" href="index.html"><img src="images/Logo/logo2.png" alt="Logo"></a>
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
