--- a/casseroles.html
+++ b/casseroles.html
@@ -99,8 +99,8 @@
 			<p>&copy; 2015 GoVeggo</p>
 		</div>
 		<div class="col-md-4 pull-right">
-		  	<a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
-		  	<a href="#"><i class="fa fa-twitter fa-2x"></i></a>
+			<a target="_blank" href="https://www.facebook.com/"><i class="fa fa-facebook-square fa-2x"></i></a>
+			<a target="_blank" href="https://twitter.com/"><i class="fa fa-twitter fa-2x"></i></a>
 		</div>
 	</div>
 </div>
