--- a/index.html
+++ b/index.html
@@ -15,69 +15,69 @@
 </head>
 
 <body>
-            <nav class="navbar navbar-default" role="navigation">
-                <div class="container">
-                    <div class="navbar-header">
-                    	<a class="brand" href="index.html"><img src="images/Logo/logo2.png" alt="Logo"></a>
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                    </div>
-                    <div class="menu">
-	                    <div class="collapse navbar-collapse" id="navbar-container">
-	                    	<div class="pull-right">
-		                        <ul class="nav navbar-nav">
-									<li role="presentation"><a href="index.html">HOME</a></li>
-									<li role="presentation"><a href="casseroles.html">CASSEROLES</a></li>
-									<li role="presentation"><a href="soups.html">SOUPS</a></li>
-									<li role="presentation"><a href="desserts.html">DESSERTS</a></li>
-		                        </ul>
-	                    	</div>
-	                    </div>
-                	</div>
-                </div><!--container-->
-            </nav><!--navbar navbar-default--> 
+    <nav class="navbar navbar-default" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="brand" href="index.html"><img src="images/Logo/logo2.png" alt="Logo"></a>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="menu">
+	            <div class="collapse navbar-collapse" id="navbar-container">
+	                <div class="pull-right">
+		                <ul class="nav navbar-nav">
+							<li role="presentation"><a href="index.html">HOME</a></li>
+							<li role="presentation"><a href="casseroles.html">CASSEROLES</a></li>
+							<li role="presentation"><a href="soups.html">SOUPS</a></li>
+							<li role="presentation"><a href="desserts.html">DESSERTS</a></li>
+		                </ul>
+	            	</div>
+	            </div>
+            </div>
+        </div><!--container-->
+    </nav><!--navbar navbar-default--> 
 
-<div class="carousel_block">
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-	<ol class="carousel-indicators">
-		<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-		<li data-target="#myCarousel" data-slide-to="1"></li>
-		<li data-target="#myCarousel" data-slide-to="2"></li>
-	</ol>
+	<div class="carousel_block">
+		<div id="myCarousel" class="carousel slide" data-ride="carousel">
+			<ol class="carousel-indicators">
+				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+				<li data-target="#myCarousel" data-slide-to="1"></li>
+				<li data-target="#myCarousel" data-slide-to="2"></li>
+			</ol>
 
-	 <div class="carousel-inner">
-	 	<div class="item active">
-	 		<img src="images/Carousel/salad.jpg" alt="Salad" class="img-responsive">
-	 		<div class="carousel-caption">
-	 			<h2>GoVeggo!</h2>
-	 		</div>
-	 	</div>
-	 	<div class="item">
-	 		<img src="images/Carousel/pizza.jpg" alt="Pizza" class="img-responsive">
-	 		<div class="carousel-caption">
-	 			<h2>GoVeggo!</h2>
-	 		</div>
-	 	</div>
-	 	<div class="item">
-	 		<img src="images/Carousel/fork.jpg" alt="Tomato" class="img-responsive">
-	 		<div class="carousel-caption">
-	 			<h2>GoVeggo!</h2>
-	 		</div>
-	 	</div>
-	 </div>
-		  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-		    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-		    <span class="sr-only">Previous</span>
-		  </a>
-		  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-		    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-		    <span class="sr-only">Next</span>
-		  </a>
-	</div>
-</div><!--carousel_block-->
+			 <div class="carousel-inner">
+			 	<div class="item active">
+			 		<img src="images/Carousel/salad.jpg" alt="Salad" class="img-responsive">
+			 		<div class="carousel-caption">
+			 			<h2>GoVeggo!</h2>
+			 		</div>
+			 	</div>
+			 	<div class="item">
+			 		<img src="images/Carousel/pizza.jpg" alt="Pizza" class="img-responsive">
+			 		<div class="carousel-caption">
+			 			<h2>GoVeggo!</h2>
+			 		</div>
+			 	</div>
+			 	<div class="item">
+			 		<img src="images/Carousel/fork.jpg" alt="Tomato" class="img-responsive">
+			 		<div class="carousel-caption">
+			 			<h2>GoVeggo!</h2>
+			 		</div>
+			 	</div>
+			</div>
+			<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
+		</div>
+	</div><!--carousel_block-->
 
 	<div class="thumbs">
 		<h1>VEGETARIAN RECIPES WHICH WILL MAKE YOU HAPPY</h1>
@@ -124,8 +124,8 @@
 				<p>&copy; 2015 GoVeggo</p>
 			</div>
 			<div class="col-md-4 pull-right">
-			  	<a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
-			  	<a href="#"><i class="fa fa-twitter fa-2x"></i></a>
+			  	<a target="_blank" href="https://www.facebook.com/"><i class="fa fa-facebook-square fa-2x"></i></a>
+			  	<a target="_blank" href="https://twitter.com/"><i class="fa fa-twitter fa-2x"></i></a>
 			</div>
 		</div>
 	</div>
